fix(): truncated labels

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -26,3 +26,7 @@
     -webkit-text-fill-color: transparent;
   }
 }
+
+.recharts-surface {
+  overflow: visible;
+}
